--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -25,6 +25,7 @@ a:hover {
   border: none;
   outline: none;
   transition: 0.4s;
+  font: noto sans;
   font-weight: bold;
   margin-bottom: 10px;
 }
