--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,6 +21,19 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        
+        <div class="panel">        
+          <p class="view"><a href="./gb-participant-guide">Gameboard Participant Guide</a></p>
+          <b>Alloy "How to":</b>
+          <p class="view"><a href="./alloy-how-to-create-a-definition">How to create an Alloy definition</a></p>
+        </div> 
+        
+        
+        
+        
+        
+        
+        
 
         <button class="accordion">Alloy Documentation</button>
         <div class="panel">        
