--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,22 +22,9 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
+        <button class="accordion">Participant Documentation</button>
         <div class="panel">        
           <p class="view"><a href="./gb-participant-guide">Gameboard Participant Guide</a></p>
-        </div> 
-        
-        
-        
-        
-        
-        
-        
-
-        <button class="accordion">Alloy Documentation</button>
-        <div class="panel">        
-          <p class="view"><a href="./alloy-quick-start">Alloy Quick Start</a></p>
-          <b>Alloy "How to":</b>
-          <p class="view"><a href="./alloy-how-to-create-a-definition">How to create an Alloy definition</a></p>
         </div>
         
         <button class="accordion">Caster Documentation</button>
