--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -37,6 +37,11 @@
           <p class="view"><a href="./gb-challenge-dev-guide">Challenge Developer Guide</a></p>         
         </div>
 
+        <button class="accordion">Reference Material</button>
+        <div class="panel"> 
+          <p class="view"><a href="./crucible-glossary">Crucible Glossary</a></p>
+        
+             
         {% if site.github.is_project_page %}
 
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
